--- a/admissions.html
+++ b/admissions.html
@@ -50,14 +50,17 @@
 
   <section id="enroll-form">
     <h2 class="section-title">Application Form</h2>
-    <form class="grid" style="gap:1rem; max-width:600px; margin:0 auto;">
-      <input type="text" placeholder="Child's Full Name" required>
-      <input type="text" placeholder="Parent/Guardian Name" required>
-      <input type="email" placeholder="Email Address" required>
-      <input type="tel" placeholder="Phone Number" required>
-      <textarea placeholder="Additional Information"></textarea>
-      <button type="submit" class="btn">Submit Application</button>
-    </form>
+<form class="grid" style="gap:1rem; max-width:600px; margin:0 auto;"
+      action="https://formspree.io/f/xgvlpvzk" 
+      method="POST">
+  <input type="text" name="child_name" placeholder="Child's Full Name" required>
+  <input type="text" name="parent_name" placeholder="Parent/Guardian Name" required>
+  <input type="email" name="email" placeholder="Email Address" required>
+  <input type="tel" name="phone" placeholder="Phone Number" required>
+  <textarea name="additional_info" placeholder="Additional Information"></textarea>
+  <button type="submit" class="btn">Submit Application</button>
+</form>
+
   </section>
 
   <footer>
@@ -71,4 +74,5 @@
   <script src="scripts.js"></script>
 </body>
 </html>
+
 
