--- a/index.html
+++ b/index.html
@@ -628,12 +628,11 @@
                 {username: 'william.oyston@hiltopprimary.com', password: 'WilliamIsCool', name: 'William Oyston', role: 'Governing Body'},
                 {username: 'chaine.louise-rose@hiltopprimary.com', password: 'ChaineLouseIsMyselfOfc', name: 'Chaine Louse-Rose', role: 'Governing Body'},
                 {username: 'victoria.meepstead@hiltopprimary.com', password: 'BillyBobJohn!', name: 'Victoria Meepstead', role: 'Headteacher'},
-                {username: 'jake.adnsrews@hiltopprimary.com', password: 'Andrews_Of_The_Jake', name: 'Jake Andrews', role: 'Deputy Headteacher'},
-                {username: 'julian.karel@hiltopprimary.com', password: 'GraysAnatomyMyself25', name: 'Julian Karel', role: 'Assistant Headteacher'},
-                {username: 'wilson.dylan@hiltopprimary.com', password: 'MrWilsonDylan_Me!', name: 'Wilson Dylan', role: 'Assistant Headteacher'},
-                {username: 'owen.martinez@hiltopprimary.com', password: 'OwenMartinez@hiltopprimary.com', name: 'Owen Martinez', role: 'Associate Senior Leader'},
+                {username: 'jake.karel@hiltopprimary.com', password: 'Jakw_Karel_Pook!', name: 'Jake Karel', role: 'Deputy Headteacher'},
+                {username: 'vacant@hiltopprimary.com', password: 'Vacant', name: 'Vacant', role: 'Assistant Headteacher'},
+                {username: 'vacant@hiltopprimary.com', password: 'Vacant', name: 'Vacant', role: 'Assistant Headteacher'},
                 {username: 'hybridz.dynamics@hiltopprimary.com', password: 'HybridsCommunityDynamics', name: 'Hybridz Dynamics', role: 'Head of Department'},
-                {username: 'vacant@hiltopprimary.com', password: 'WilliamIsCool', name: 'Vacant', role: 'Teacher'},
+                {username: 'owen.martinez@hiltopprimary.com', password: 'OwenMartinezz_25', name: 'Owen Martinez', role: 'Teacher'},
                 {username: 'vacant@hiltopprimary.com', password: 'WilliamIsCool', name: 'Vacant', role: 'Teacher'},
                 {username: 'vacant@hiltopprimary.com', password: 'WilliamIsCool', name: 'Vacant', role: 'Teacher'},
                 {username: 'vacant@hiltopprimary.com', password: 'WilliamIsCool', name: 'Vacant', role: 'Teacher'},
@@ -668,7 +667,7 @@
                 {username: 'jake.adnsrews@hiltopprimary.com', password: 'Andrews_Of_The_Jake', name: 'Jake Andrews', role: 'Deputy Headteacher'},
                 {username: 'julian.karel@hiltopprimary.com', password: 'GraysAnatomyMyself25', name: 'Julian Karel', role: 'Assistant Headteacher'},
                 {username: 'vacant@hiltopprimary.com', password: 'WilliamIsCool', name: 'Vacant Class', role: 'Assistant Headteacher'},
-                {username: 'owen.martinez@hiltopprimary.com', password: 'OwenMartinez@hiltopprimary.com', name: 'Owen Martinez', role: 'Associate Senior Leader'},
+                {username: 'owen.martinez@hiltopprimary.com', password: 'tbu@hiltopprimary.com', name: 'Owen Martinez', role: 'Associate Senior Leader'},
 
             ],
             currentUser: null,
