--- a/index.html
+++ b/index.html
@@ -378,6 +378,20 @@
     </style>
 </head>
 <body>
+    <!-- Open Graph / Facebook -->
+<meta property="og:title" content="Hiltop Primary School">
+<meta property="og:description" content="Welcome to Hiltop Primary School – Be kind, Work Hard">
+<meta property="og:image" content="logo.png">
+<meta property="og:url" content="https://bennydog138.github.io/hiltop.primary.school">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="logo.png">
+<meta name="twitter:title" content="Hiltop Primary School">
+<meta name="twitter:description" content="Welcome to Hiltop Primary School – Be Kind, Work Hard">
+<meta name="twitter:image" content="logo.png">
+<meta name="twitter:site" content="@HiltopSchool">
+    
     <div class="header">
         <div class="header-content">
             <h1>🎓 Hampton Primary School</h1>
